# MusicPlayer

./: CMakeLists.txt  CMakelists.txt
libs/: linkedlist.c  textfilewriter.c
src/: Player.c
tst/: PlayerTest.cc
